# sxsurl

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SXURL-SPEC.md  SXURL.md  sxurl_revise.md
src/: decoder.rs  encoder.rs  error.rs  hasher.rs  lib.rs  main.rs  normalizer.rs  packer.rs  psl.rs  types.rs  utils.rs
src/core/: decoder.rs  encoder.rs  hasher.rs  matcher.rs  mod.rs  packer.rs
src/url/: mod.rs  normalizer.rs  psl.rs  utils.rs
tests/: hash_tests.rs  integration_tests.rs  packing_tests.rs  url_tests.rs  utils_tests.rs
