[package]
name = "sxurl"
version = "1.1.0"
edition = "2021"
authors = ["Valyu", "Hirsh Pithadia"]
description = "Fixed-length, sliceable URL identifier system for efficient database storage and querying"
documentation = "https://docs.rs/sxurl"
repository = "https://github.com/hjpithadia/sxurl"
homepage = "https://github.com/hjpithadia/sxurl"
license = "Apache-2.0"
readme = "README.md"
keywords = ["url", "hashing", "database", "indexing", "identifier"]
categories = ["encoding", "database", "web-programming"]

# Files to exclude from the published package
exclude = [
    "CLAUDE.md",
    "SXURL.md",
    "SXURL-SPEC.md",
    ".github/*",
    "docs/*",
    "examples/*",
    "target/*",
    ".vscode/*",
    ".idea/*",
    ".env*",
]

[dependencies]
url = "2.5"
sha2 = "0.10"
psl = "2"
idna = "1.1.0"
thiserror = "2.0.15"
hex = "0.4"

[dev-dependencies]
proptest = "1.4"
criterion = "0.7.0"
